--- a/src/app/ejercicio/crear-ejercicio/crear-ejercicio.component.html
+++ b/src/app/ejercicio/crear-ejercicio/crear-ejercicio.component.html
@@ -1,71 +1,54 @@
-<div class="d-flex" id="wrapper">
-    <div class="bg-light border-right" id="sidebar-wrapper">
-        <div class="sidebar-heading color-label">MENU </div>
-        <hr>
-        <div class="list-group list-group-flush">
-            <a href="/crear-cliente" class="list-group-item list-group-item-action bg-light color-label">CREAR CLIENTE</a>
-            <a href="/leer-cliente" class="list-group-item list-group-item-action bg-light color-label">VER CLIENTES</a>
-            <a href="/crear-ejercicio" class="list-group-item list-group-item-action bg-light color-label">CREAR EJERCICIO</a>
-            <a href="/leer-ejercicio" class="list-group-item list-group-item-action bg-light color-label">VER EJERCICIOS</a>
-            <a href="/crear-plantilla-plan" class="list-group-item list-group-item-action bg-light color-label">CREAR PLANTILLA</a>
-            <a href="/leer-plantilla-plan" class="list-group-item list-group-item-action bg-light color-label">VER PLANTILLAS</a>
-            <a href="#" (click)="cerrarSesion($event)" class="list-group-item list-group-item-action bg-light color-label">CERRAR
-                SESION</a>
+<div class="container-fluid">
+    <div class="row">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom d-flex justify-content-center">
+            <a class="btn btn-ligth" href="/menu"><i class="bi bi-list" style="font-size: 1.5rem"></i></a>
+        </nav>
+    </div>
+    <div class="row">
+        <img src="{{prefijoUrlImagenes+logo}}" class="esp-image" alt="...">
+    </div>
+    <div class="row">
+        <div class="col" align="center">
+            <h2 class="color-label font-size-tittle">CREAR EJERCICIO</h2>
         </div>
     </div>
-    <div id="page-content-wrapper">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom justify">
-            <button class="btn btn-ligth" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></button>
-            <span class="separate"></span>
-            <a class="navbar-brand" href="#"></a>
-        </nav>
-        <div class="container">
-            <div class="row">
-                <img src="{{prefijoUrlImagenes+logo}}" class="esp-image" alt="...">
+    <div class="row mb-3">
+        <div class="col-12">
+            <div class="form-floating">
+                <input type="text" [(ngModel)]="ejercicio.descripcion" placeholder="" class="form-control"
+                    oninput="this.value = this.value.toUpperCase()" id="floatingNombre">
+                <label for="floatingNombre" class="color-label font-bold">Nombre</label>
             </div>
-            <div class="row">
-                <div class="col" align="center">
-                    <h2 class="color-label font-size-tittle">CREAR EJERCICIO</h2>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-12">
-                    <div class="form-floating">
-                        <input type="text" [(ngModel)]="ejercicio.descripcion" placeholder="" class="form-control"
-                            oninput="this.value = this.value.toUpperCase()" id="floatingNombre">
-                        <label for="floatingNombre" class="color-label font-bold">Nombre</label>
-                    </div>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="form-floating">
-                    <select [(ngModel)]="ejercicio.tipoMusculo" id="floatingTipoMusculo" [compareWith]="compareFn" class="form-select">
-                        <option *ngFor="let tipoMusculo of tiposMusculos; let i=index" [value]=tipoMusculo>
-                            {{tipoMusculo.descripcion}}</option>
-                    </select>
-                    <label for="floatingTipoMusculo" class="color-label font-bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tipo Musculo</label>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="d-grid gap-1">
-                    <label style="text-align: center;" class="color-label">Imagen:</label>
-                    <input hidden type="file" #botonImagen id="imagen" name="imagen"
-                        (change)="cargarImagen($event)">
-                    <button (click)="botonImagen.click()" class="btn btn-primary">Cargar Imagen</button>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-12">
-                    <ng-container *ngIf="imagen!=null">
-                        <p>{{imagen.name}}</p>
-                    </ng-container>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="d-grid gap-1">
-                    <button type="button" (click)="crear()" class="btn btn-success">Guardar</button>
-                </div>
-            </div>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="form-floating">
+            <select [(ngModel)]="ejercicio.tipoMusculo" id="floatingTipoMusculo" [compareWith]="compareFn"
+                class="form-select">
+                <option *ngFor="let tipoMusculo of tiposMusculos; let i=index" [value]=tipoMusculo>
+                    {{tipoMusculo.descripcion}}</option>
+            </select>
+            <label for="floatingTipoMusculo" class="color-label font-bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tipo
+                Musculo</label>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="d-grid gap-1">
+            <label style="text-align: center;" class="color-label">Imagen:</label>
+            <input hidden type="file" #botonImagen id="imagen" name="imagen" (change)="cargarImagen($event)">
+            <button (click)="botonImagen.click()" class="btn btn-primary">Cargar Imagen</button>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="col-12">
+            <ng-container *ngIf="imagen!=null">
+                <p>{{imagen.name}}</p>
+            </ng-container>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="d-grid gap-1">
+            <button type="button" (click)="crear()" class="btn btn-success">Guardar</button>
         </div>
     </div>
 </div>
