--- a/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.html
+++ b/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.html
@@ -1,74 +1,56 @@
-<div class="d-flex" id="wrapper">
-    <div class="bg-light border-right" id="sidebar-wrapper">
-        <div class="sidebar-heading color-label">MENU </div>
-        <hr>
-        <div class="list-group list-group-flush">
-            <a href="/crear-cliente" class="list-group-item list-group-item-action bg-light color-label">CREAR CLIENTE</a>
-            <a href="/leer-cliente" class="list-group-item list-group-item-action bg-light color-label">VER CLIENTES</a>
-            <a href="/crear-ejercicio" class="list-group-item list-group-item-action bg-light color-label">CREAR EJERCICIO</a>
-            <a href="/leer-ejercicio" class="list-group-item list-group-item-action bg-light color-label">VER EJERCICIOS</a>
-            <a href="/crear-plantilla-plan" class="list-group-item list-group-item-action bg-light color-label">CREAR PLANTILLA</a>
-            <a href="/leer-plantilla-plan" class="list-group-item list-group-item-action bg-light color-label">VER PLANTILLAS</a>
-            <a href="#" (click)="cerrarSesion($event)" class="list-group-item list-group-item-action bg-light color-label">CERRAR
-                SESION</a>
+<div class="container-fluid">
+    <div class="row">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom d-flex justify-content-center">
+            <a class="btn btn-ligth" href="/menu"><i class="bi bi-list" style="font-size: 1.5rem"></i></a>
+        </nav>
+    </div>
+    <div class="row">
+        <img src="{{prefijoUrlImagenes+logo}}" class="esp-image" alt="...">
+    </div>
+    <div class="row">
+        <div class="col-12" align="center">
+            <h2 class="color-label font-size-tittle">EJERCICIOS</h2>
         </div>
     </div>
-    <div id="page-content-wrapper">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom justify">
-            <button class="btn btn-ligth" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></button>
-            <span class="separate"></span>
-            <a class="navbar-brand" href="#"></a>
-        </nav>
-        <div class="container">
-            <div class="row">
-                <img src="{{prefijoUrlImagenes+logo}}" class="esp-image" alt="...">
-            </div>
-            <div class="row">
-                <div class="col-12" align="center">
-                    <h2 class="color-label font-size-tittle">EJERCICIOS</h2>
-                </div>
-            </div>
-            <div class="input-group mb-3">
-                <div class="form-floating col-10">
-                    <input type="text" [(ngModel)]="descripcion" placeholder="" class="form-control" oninput="this.value = this.value.toUpperCase()"
-                        id="floatingDescripcion">
-                    <label for="floatingDescripcion" class="color-label font-bold">Buscar Ejercicio</label>
-                </div>
-                <button type="button" class="btn btn-outline-info col-2 color-button-search"><i class="bi bi-search esp-icon-search"></i></button>
-            </div>
-            <div class="row">
-                <div class="col-12 scrollcustom">
-                    <table class="table table-hover table-bordered" >
-                        <thead class="table-active font-color">
-                            <tr>
-                                <th>No.</th>
-                                <th>DESCRIPCION</th>
-                                <th>TIPO</th>
-                                <th>OPC</th>
-                            </tr>
-                        </thead>
-                        <tbody style="font-size: 0.9rem;" class="font-color">
-                            <tr *ngFor="let ejercicio of ejercicios; let i=index">
-                                <td>{{i+1}}</td>
-                                <td>{{ejercicio.descripcion}}</td>
-                                <td>{{ejercicio.tipoMusculo.descripcion}}</td>
-                                <td>
-                                    <button (click)="editar(i)" class="btn btn-light btn-sm separate">
-                                        <i class="bi bi-pencil font-color"></i>
-                                    </button>
-                                    <button (click)="abrirModalLeerEjercicio(i)"
-                                        class="btn btn-light btn-sm separate">
-                                        <i class="bi bi-eye font-color"></i>
-                                    </button>
-                                    <button class="btn btn-light btn-sm separate" (click)="eliminar(i)">
-                                        <i class="bi bi-trash font-color"></i>
-                                    </button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+    <div class="input-group mb-3">
+        <div class="form-floating col-10">
+            <input type="text" [(ngModel)]="descripcion" placeholder="" class="form-control"
+                oninput="this.value = this.value.toUpperCase()" id="floatingDescripcion">
+            <label for="floatingDescripcion" class="color-label font-bold">Buscar Ejercicio</label>
+        </div>
+        <button type="button" class="btn btn-outline-info col-2 color-button-search"><i
+                class="bi bi-search esp-icon-search"></i></button>
+    </div>
+    <div class="row">
+        <div class="col-12 scrollcustom">
+            <table class="table table-hover table-bordered">
+                <thead class="table-active font-color">
+                    <tr>
+                        <th>No.</th>
+                        <th>DESCRIPCION</th>
+                        <th>TIPO</th>
+                        <th>OPC</th>
+                    </tr>
+                </thead>
+                <tbody style="font-size: 0.9rem;" class="font-color">
+                    <tr *ngFor="let ejercicio of ejercicios; let i=index">
+                        <td>{{i+1}}</td>
+                        <td>{{ejercicio.descripcion}}</td>
+                        <td>{{ejercicio.tipoMusculo.descripcion}}</td>
+                        <td>
+                            <button (click)="editar(i)" class="btn btn-light btn-sm separate">
+                                <i class="bi bi-pencil font-color"></i>
+                            </button>
+                            <button (click)="abrirModalLeerEjercicio(i)" class="btn btn-light btn-sm separate">
+                                <i class="bi bi-eye font-color"></i>
+                            </button>
+                            <button class="btn btn-light btn-sm separate" (click)="eliminar(i)">
+                                <i class="bi bi-trash font-color"></i>
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
@@ -82,14 +64,17 @@
         <div class="row mb-3">
             <div class="col-12">
                 <div class="form-floating">
-                    <input type="text" [(ngModel)]="ejercicioActualizar.descripcion" oninput="this.value = this.value.toUpperCase()" placeholder="" class="form-control" id="floatingDescripcion">
+                    <input type="text" [(ngModel)]="ejercicioActualizar.descripcion"
+                        oninput="this.value = this.value.toUpperCase()" placeholder="" class="form-control"
+                        id="floatingDescripcion">
                     <label for="floatingDescripcion" class="font-color font-bold">Descripcion</label>
                 </div>
             </div>
         </div>
         <div class="row mb-3">
             <div class="form-floating">
-                <select [(ngModel)]="ejercicioActualizar.tipoMusculo" [compareWith]="compareFn" id="floatingTipoMusculo" class="form-select">
+                <select [(ngModel)]="ejercicioActualizar.tipoMusculo" [compareWith]="compareFn" id="floatingTipoMusculo"
+                    class="form-select">
                     <option *ngFor="let tipoMusculo of tiposMusculos; let i=index" [value]=tipoMusculo>
                         {{tipoMusculo.descripcion}}</option>
                 </select>
