--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,58 +1,40 @@
-<div class="d-flex" id="wrapper">
-    <div class="bg-light border-right" id="sidebar-wrapper">
-        <div class="sidebar-heading color-label">MENU </div>
-        <hr>
-        <div class="list-group list-group-flush">
-            <a href="/crear-cliente" class="list-group-item list-group-item-action bg-light color-label">CREAR CLIENTE</a>
-            <a href="/leer-cliente" class="list-group-item list-group-item-action bg-light color-label">VER CLIENTES</a>
-            <a href="/crear-ejercicio" class="list-group-item list-group-item-action bg-light color-label">CREAR EJERCICIO</a>
-            <a href="/leer-ejercicio" class="list-group-item list-group-item-action bg-light color-label">VER EJERCICIOS</a>
-            <a href="/crear-plantilla-plan" class="list-group-item list-group-item-action bg-light color-label">CREAR PLANTILLA</a>
-            <a href="/leer-plantilla-plan" class="list-group-item list-group-item-action bg-light color-label">VER PLANTILLAS</a>
-            <a href="#" (click)="cerrarSesion($event)" class="list-group-item list-group-item-action bg-light color-label">CERRAR
-                SESION</a>
+<div class="container-fluid">
+    <div class="row">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom d-flex justify-content-center">
+            <a class="btn btn-ligth" href="/menu"><i class="bi bi-list" style="font-size: 1.5rem"></i></a>
+        </nav>
+    </div>
+    <div class="row">
+        <img src="{{prefijoUrlImagenes+logo}}" class="esp-image" alt="...">
+    </div>
+    <div class="row">
+        <div class="col-12" align="center">
+            <h2 class="font-size-tittle color-tittle font-tittle">MENU</h2>
         </div>
     </div>
-    <div id="page-content-wrapper">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom justify">
-            <button class="btn btn-ligth" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></button>
-            <span class="separate"></span>
-            <a class="navbar-brand" href="#"></a>
-        </nav>
-        <div class="container">
-            <div class="row">
-                <img src="{{prefijoUrlImagenes+logo}}" class="esp-image" alt="...">
+    <br>
+    <div class="row mb-4">
+        <div class="col-12">
+            <div class="d-grid gap-2">
+                <button type="button" (click)="navegarCrearCliente()" class="btn btn-primary color-button">Crear
+                    Cliente</button>
+                <button type="button" (click)="navegarVerClientes()" class="btn btn-primary color-button">Ver
+                    Clientes</button>
+                <button type="button" (click)="navegarCrearEjercicio()" class="btn btn-primary color-button">Crear
+                    Ejercicio</button>
+                <button type="button" (click)="navegarVerEjercicios()" class="btn btn-primary color-button">Ver
+                    Ejercicios</button>
+                <button type="button" (click)="navegarCrearPlantilla()" class="btn btn-primary color-button">Crear
+                    Plantilla</button>
+                <button type="button" (click)="navegarVerPlantillas()" class="btn btn-primary color-button">Ver
+                    Plantillas</button>
             </div>
-            <div class="row">
-                <div class="col-12" align="center">
-                    <h2 class="font-size-tittle color-tittle font-tittle">MENU</h2>
-                </div>
-            </div>
-            <br>
-            <div class="row mb-5">
-                <div class="col-12">
-                    <div class="d-grid gap-2">
-                        <button type="button" (click)="navegarCrearCliente()"
-                            class="btn btn-primary color-button">Crear Cliente</button>
-                        <button type="button" (click)="navegarVerClientes()"
-                            class="btn btn-primary color-button">Ver Clientes</button>
-                        <button type="button" (click)="navegarCrearEjercicio()"
-                            class="btn btn-primary color-button">Crear Ejercicio</button>
-                        <button type="button" (click)="navegarVerEjercicios()"
-                            class="btn btn-primary color-button">Ver Ejercicios</button>
-                        <button type="button" (click)="navegarCrearPlantilla()"
-                            class="btn btn-primary color-button">Crear Plantilla</button>
-                        <button type="button" (click)="navegarVerPlantillas()"
-                            class="btn btn-primary color-button">Ver Plantillas</button>
-                    </div>
-                </div>
-            </div>
-            <div class="row font-size">
-                <div class="col-12 d-grid gap-2">
-                    <button type="button" (click)="cerrarSesion(null)"
-                        class="btn btn-primary color-button">Cerrar Sesion</button>
-                </div>
-            </div>
+        </div>
+    </div>
+    <div class="row font-size">
+        <div class="col-12 d-grid gap-2">
+            <button type="button" (click)="cerrarSesion(null)" class="btn btn-primary color-button">Cerrar
+                Sesion</button>
         </div>
     </div>
 </div>
