--- a/src/app/plan/leer-plan/leer-plan.component.html
+++ b/src/app/plan/leer-plan/leer-plan.component.html
@@ -1,112 +1,100 @@
-<div class="d-flex" id="wrapper">
-    <div class="bg-light border-right" id="sidebar-wrapper">
-        <div class="sidebar-heading color-label">MENU </div>
-        <hr>
-        <div class="list-group list-group-flush">
-            <a href="/leer-medida" class="list-group-item list-group-item-action bg-light color-label">MEDIDAS</a>
-            <a href="#" (click)="cerrarSesion($event)" class="list-group-item list-group-item-action bg-light color-label">CERRAR
-                SESION</a>
-        </div>
-    </div>
-    <div id="page-content-wrapper">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom justify">
-            <button class="btn btn-ligth" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></button>
-            <span class="separate"></span>
-            <a class="navbar-brand" href="#"></a>
+<div class="container-fluid">
+    <div class="row">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom d-flex justify-content-center">
+            <a class="btn btn-ligth" href="/menu"><i class="bi bi-list" style="font-size: 1.5rem"></i></a>
         </nav>
-        <div class="container">
-            <div class="row">
-                <img src="{{prefijoUrlImagenes+logo}}" class="esp-image" alt="...">
-            </div>
-            <div class="row">
-                <div class="col-sm" align="center">
-                    <h2 class="color-label font-size-tittle">PLAN DE ENTRENAMIENTO</h2>
-                </div>
-            </div>
-            <ng-container *ngIf="usuario.plan == null || usuario.plan.dias.length==0">
-                <div class="row">
-                    <div class="col-sm">
-                        <div align="center" class="alert alert-warning font-weight-bold" role="alert">
-                            NO EXISTE PLAN DE ENTRENAMIENTO
-                        </div>
-                    </div>
-                </div>
-            </ng-container>
-            <ng-container *ngIf="usuario.plan != null && usuario.plan.dias.length!=0">
-                <div class="row">
-                    <div class="col-sm">
-                        <div id="accordion">
-                            <ng-container *ngFor="let dia of usuario.plan.dias; let i=index">
-                                <div class="card">
-                                    <div class="card-header" id="heading{{i+1}}">
-                                        <h5 class="mb-0">
-                                            <button class="btn btn-link" data-toggle="collapse"
-                                                attr.data-target="#collapse{{i+1}}" aria-expanded="true"
-                                                attr.aria-controls="collapse{{i+1}}">
-                                                DIA {{i+1}} ({{dia.nombre}})
-                                            </button>
-                                        </h5>
-                                    </div>
-
-                                    <div id="collapse{{i+1}}" class="collapse {{dia.show}}"
-                                        attr.aria-labelledby="heading{{i+1}}" data-parent="#accordion">
-                                        <div class="card-body">
-                                            <ng-container *ngIf="dia.rutinas.length>0">
-                                                <div class="row">
-                                                    <div class="col-sm table-responsive">
-                                                        <table class="table table-sm table-hover table-bordered">
-                                                            <thead>
-                                                                <tr class="menor-fuente">
-                                                                    <th scope="col">°</th>
-                                                                    <th scope="col">EJERCICIO</th>
-                                                                    <th scope="col">REP</th>
-                                                                    <th scope="col">SER</th>
-                                                                    <th scope="col">PESO&nbsp;&nbsp;</th>
-                                                                    <th scope="col">TIEMPO</th>
-                                                                    <th scope="col">OPC</th>
-                                                                </tr>
-                                                            </thead>
-                                                            <tbody>
-                                                                <tr class="menor-fuente" *ngFor="let rutina of dia.rutinas; let j=index">
-                                                                    <td>{{j+1}}</td>
-                                                                    <td>
-                                                                        {{rutina.ejercicio.descripcion}}
-                                                                    </td>
-                                                                    <td>
-                                                                        {{rutina.repeticiones}}
-                                                                    </td>
-                                                                    <td>
-                                                                        {{rutina.series}}</td>
-                                                                    <td>
-                                                                        {{rutina.valorPeso}}&nbsp;
-                                                                        {{rutina.medidaPeso}}
-                                                                    </td>
-                                                                    <td>
-                                                                        {{rutina.valorTiempo}}&nbsp;
-                                                                        {{rutina.medidaTiempo}}
-                                                                    </td>
-                                                                    <td>
-                                                                        <button class="btn btn-sm btn-primary separate"
-                                                                            (click)="abrirModalLeerEjercicio(i, j)">
-                                                                            <i class="fa fa-eye"></i>
-                                                                        </button>
-                                                                    </td>
-                                                                </tr>
-                                                            </tbody>
-                                                        </table>
-                                                    </div>
-                                                </div>
-                                            </ng-container>
-                                        </div>
-                                    </div>
-                                </div>
-                            </ng-container>
-                        </div>
-                    </div>
-                </div>
-            </ng-container>
+    </div>
+    <div class="row">
+        <img src="{{prefijoUrlImagenes+logo}}" class="esp-image" alt="...">
+    </div>
+    <div class="row">
+        <div class="col-sm" align="center">
+            <h2 class="color-label font-size-tittle">PLAN DE ENTRENAMIENTO</h2>
         </div>
     </div>
+    <ng-container *ngIf="usuario.plan == null || usuario.plan.dias.length==0">
+        <div class="row">
+            <div class="col-sm">
+                <div align="center" class="alert alert-warning font-weight-bold" role="alert">
+                    NO EXISTE PLAN DE ENTRENAMIENTO
+                </div>
+            </div>
+        </div>
+    </ng-container>
+    <ng-container *ngIf="usuario.plan != null && usuario.plan.dias.length!=0">
+        <div class="row">
+            <div class="col-sm">
+                <div id="accordion">
+                    <ng-container *ngFor="let dia of usuario.plan.dias; let i=index">
+                        <div class="card">
+                            <div class="card-header" id="heading{{i+1}}">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link" data-toggle="collapse"
+                                        attr.data-target="#collapse{{i+1}}" aria-expanded="true"
+                                        attr.aria-controls="collapse{{i+1}}">
+                                        DIA {{i+1}} ({{dia.nombre}})
+                                    </button>
+                                </h5>
+                            </div>
+
+                            <div id="collapse{{i+1}}" class="collapse {{dia.show}}"
+                                attr.aria-labelledby="heading{{i+1}}" data-parent="#accordion">
+                                <div class="card-body">
+                                    <ng-container *ngIf="dia.rutinas.length>0">
+                                        <div class="row">
+                                            <div class="col-sm table-responsive">
+                                                <table class="table table-sm table-hover table-bordered">
+                                                    <thead>
+                                                        <tr class="menor-fuente">
+                                                            <th scope="col">°</th>
+                                                            <th scope="col">EJERCICIO</th>
+                                                            <th scope="col">REP</th>
+                                                            <th scope="col">SER</th>
+                                                            <th scope="col">PESO&nbsp;&nbsp;</th>
+                                                            <th scope="col">TIEMPO</th>
+                                                            <th scope="col">OPC</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <tr class="menor-fuente"
+                                                            *ngFor="let rutina of dia.rutinas; let j=index">
+                                                            <td>{{j+1}}</td>
+                                                            <td>
+                                                                {{rutina.ejercicio.descripcion}}
+                                                            </td>
+                                                            <td>
+                                                                {{rutina.repeticiones}}
+                                                            </td>
+                                                            <td>
+                                                                {{rutina.series}}</td>
+                                                            <td>
+                                                                {{rutina.valorPeso}}&nbsp;
+                                                                {{rutina.medidaPeso}}
+                                                            </td>
+                                                            <td>
+                                                                {{rutina.valorTiempo}}&nbsp;
+                                                                {{rutina.medidaTiempo}}
+                                                            </td>
+                                                            <td>
+                                                                <button class="btn btn-sm btn-primary separate"
+                                                                    (click)="abrirModalLeerEjercicio(i, j)">
+                                                                    <i class="fa fa-eye"></i>
+                                                                </button>
+                                                            </td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                        </div>
+                                    </ng-container>
+                                </div>
+                            </div>
+                        </div>
+                    </ng-container>
+                </div>
+            </div>
+        </div>
+    </ng-container>
 </div>
 <ng-template #modalLeerEjercicio let-modal>
     <div class="modal-header">
@@ -120,12 +108,13 @@
                     class="font-weight-bold">{{usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.descripcion}}</label>
                 <ng-container *ngIf="usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen!=null">
                     <img class="card-img-top"
-                    src="{{prefijoUrlEjercicios+usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen}}"
-                    height="300px" alt="Card image cap">
+                        src="{{prefijoUrlEjercicios+usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen}}"
+                        height="300px" alt="Card image cap">
                 </ng-container>
                 <ng-container *ngIf="usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.imagen==null">
-                    <textarea rows="3" [disabled]="true" [(ngModel)]="usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.detalle"
-                            oninput="this.value = this.value.toUpperCase()" class="form-control form-control-sm"></textarea>
+                    <textarea rows="3" [disabled]="true"
+                        [(ngModel)]="usuario.plan.dias[seleccionPE].rutinas[seleccionRE].ejercicio.detalle"
+                        oninput="this.value = this.value.toUpperCase()" class="form-control form-control-sm"></textarea>
                 </ng-container>
             </div>
         </div>
