--- a/src/app/plan/leer-plantilla-plan/leer-plantilla-plan.component.html
+++ b/src/app/plan/leer-plantilla-plan/leer-plantilla-plan.component.html
@@ -1,83 +1,66 @@
-<div class="d-flex" id="wrapper">
-    <div class="bg-light border-right" id="sidebar-wrapper">
-        <div class="sidebar-heading color-label">MENU </div>
-        <hr>
-        <div class="list-group list-group-flush">
-            <a href="/crear-cliente" class="list-group-item list-group-item-action bg-light color-label">CREAR CLIENTE</a>
-            <a href="/leer-cliente" class="list-group-item list-group-item-action bg-light color-label">VER CLIENTES</a>
-            <a href="/crear-ejercicio" class="list-group-item list-group-item-action bg-light color-label">CREAR EJERCICIO</a>
-            <a href="/leer-ejercicio" class="list-group-item list-group-item-action bg-light color-label">VER EJERCICIOS</a>
-            <a href="/crear-plantilla-plan" class="list-group-item list-group-item-action bg-light color-label">CREAR PLANTILLA</a>
-            <a href="/leer-plantilla-plan" class="list-group-item list-group-item-action bg-light color-label">VER PLANTILLAS</a>
-            <a href="#" (click)="cerrarSesion($event)" class="list-group-item list-group-item-action bg-light color-label">CERRAR
-                SESION</a>
+<div class="container">
+    <div class="row">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom d-flex justify-content-center">
+            <a class="btn btn-ligth" href="/menu"><i class="bi bi-list" style="font-size: 1.5rem"></i></a>
+        </nav>
+    </div>
+    <div class="row">
+        <img src="{{prefijoUrlImagenes+logo}}" class="esp-image" alt="...">
+    </div>
+    <div class="row">
+        <div class="col-12" align="center">
+            <h2 class="color-label">PLANTILLAS REGISTRADAS</h2>
         </div>
     </div>
-    <div id="page-content-wrapper">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom justify">
-            <button class="btn btn-ligth" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></button>
-            <span class="separate"></span>
-            <a class="navbar-brand" href="#"></a>
-        </nav>
-        <div class="container">
-            <div class="row">
-                <img src="{{prefijoUrlImagenes+logo}}" class="esp-image" alt="...">
+    <div class="row mb-3">
+        <div class="col-12">
+            <div class="form-floating">
+                <input type="text" [(ngModel)]="nombre" placeholder="" class="form-control" id="floatingNombre">
+                <label for="floatingNombre" class="color-label font-bold">Nombre</label>
             </div>
-            <div class="row">
-                <div class="col-12" align="center">
-                    <h2 class="color-label">PLANTILLAS REGISTRADAS</h2>
-                </div>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="col-12">
+            <div class="form-floating">
+                <input type="text" [(ngModel)]="somatotipo" placeholder="" class="form-control" id="floatingNombre">
+                <label for="floatingNombre" class="color-label font-bold">Somatotipo</label>
             </div>
-            <div class="row mb-3">
-                <div class="col-12">
-                    <div class="form-floating">
-                        <input type="text" [(ngModel)]="nombre" placeholder="" class="form-control" id="floatingNombre">
-                        <label for="floatingNombre" class="color-label font-bold">Nombre</label>
-                    </div>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-12">
-                    <div class="form-floating">
-                        <input type="text" [(ngModel)]="somatotipo" placeholder="" class="form-control" id="floatingNombre">
-                        <label for="floatingNombre" class="color-label font-bold">Somatotipo</label>
-                    </div>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="d-grid gap-1">
-                    <button class="btn btn-sm btn-primary color-button" (click)="buscar()">Buscar</button>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 scrollcustom">
-                    <table class="table table-hover table-bordered">
-                        <thead class="table-active font-color">
-                            <tr>
-                                <th>No.</th>
-                                <th>NOMBRE</th>
-                                <th>SOMATOTIPO</th>
-                                <th>OPC</th>
-                            </tr>
-                        </thead>
-                        <tbody class="font-color">
-                            <tr *ngFor="let plantillaPlan of plantillasPlan; let i=index">
-                                <td>{{i+1}}</td>
-                                <td>{{plantillaPlan.nombre}}</td>
-                                <td>{{plantillaPlan.somatotipo}}</td>
-                                <td>
-                                    <a type="button" href="/crear-plantilla-plan?id={{plantillaPlan.id}}" class="btn btn-sm btn-light separate">
-                                        <i class="bi bi-pencil font-color"></i>
-                                    </a>
-                                    <button class="btn btn-sm btn-light separate" (click)="eliminar(i)">
-                                        <i class="bi bi-trash font-color"></i>
-                                    </button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="d-grid gap-1">
+            <button class="btn btn-sm btn-primary color-button" (click)="buscar()">Buscar</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 scrollcustom">
+            <table class="table table-hover table-bordered">
+                <thead class="table-active font-color">
+                    <tr>
+                        <th>No.</th>
+                        <th>NOMBRE</th>
+                        <th>SOMATOTIPO</th>
+                        <th>OPC</th>
+                    </tr>
+                </thead>
+                <tbody class="font-color">
+                    <tr *ngFor="let plantillaPlan of plantillasPlan; let i=index">
+                        <td>{{i+1}}</td>
+                        <td>{{plantillaPlan.nombre}}</td>
+                        <td>{{plantillaPlan.somatotipo}}</td>
+                        <td>
+                            <a type="button" href="/crear-plantilla-plan?id={{plantillaPlan.id}}"
+                                class="btn btn-sm btn-light separate">
+                                <i class="bi bi-pencil font-color"></i>
+                            </a>
+                            <button class="btn btn-sm btn-light separate" (click)="eliminar(i)">
+                                <i class="bi bi-trash font-color"></i>
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
