--- a/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.html
+++ b/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom d-flex justify-content-center">
-            <a class="btn btn-ligth" href="/menu"><i class="bi bi-list" style="font-size: 1.5rem"></i></a>
+            <button class="btn btn-ligth" (click)="menu()"><i class="bi bi-list" style="font-size: 1.5rem"></i></button>
         </nav>
     </div>
     <div class="row">
@@ -83,8 +83,8 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="actualizar()">Guardar</button>
-        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-dark color-button" (click)="actualizar()">Guardar</button>
+        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -103,6 +103,6 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
