--- a/src/app/plan/crear-plan/crear-plan.component.html
+++ b/src/app/plan/crear-plan/crear-plan.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom d-flex justify-content-center">
-            <a class="btn btn-ligth" href="/menu"><i class="bi bi-list" style="font-size: 1.5rem"></i></a>
+            <button class="btn btn-ligth" (click)="menu()"><i class="bi bi-list" style="font-size: 1.5rem"></i></button>
         </nav>
     </div>
     <div class="row">
@@ -269,8 +269,8 @@
         </ng-container>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="crearRutina()">Guardar</button>
-        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-dark color-button" (click)="crearRutina()">Guardar</button>
+        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -394,8 +394,8 @@
         </ng-container>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="actualizarRutina()">Guardar</button>
-        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-dark color-button" (click)="actualizarRutina()">Guardar</button>
+        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -423,7 +423,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -453,7 +453,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="crearPlantillaPlan()">Guardar</button>
-        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-dark color-button" (click)="crearPlantillaPlan()">Guardar</button>
+        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
