--- a/src/app/plan/leer-medida/leer-medida.component.html
+++ b/src/app/plan/leer-medida/leer-medida.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom d-flex justify-content-center">
-            <a class="btn btn-ligth" href="/menu"><i class="bi bi-list" style="font-size: 1.5rem"></i></a>
+            <button class="btn btn-ligth" (click)="menu()"><i class="bi bi-list" style="font-size: 1.5rem"></i></button>
         </nav>
     </div>
     <div class="row">
@@ -100,7 +100,7 @@
         </table>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -128,7 +128,7 @@
         </table>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -154,7 +154,7 @@
         </table>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -180,6 +180,6 @@
         </table>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
