--- a/src/app/plan/leer-plantilla-plan/leer-plantilla-plan.component.html
+++ b/src/app/plan/leer-plantilla-plan/leer-plantilla-plan.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom d-flex justify-content-center">
-            <a class="btn btn-ligth" href="/menu"><i class="bi bi-list" style="font-size: 1.5rem"></i></a>
+            <button class="btn btn-ligth" (click)="menu()"><i class="bi bi-list" style="font-size: 1.5rem"></i></button>
         </nav>
     </div>
     <div class="row">
