Se modifican botones

--- a/src/app/cliente/crear-cliente/crear-cliente.component.html
+++ b/src/app/cliente/crear-cliente/crear-cliente.component.html
@@ -24,7 +24,7 @@
     <div class="row mb-3">
         <div class="col-12">
             <div class="form-floating">
-                <input type="text" [(ngModel)]="usuario.identificacion" placeholder="" class="form-control"
+                <input type="number" [(ngModel)]="usuario.identificacion" placeholder="" class="form-control"
                     id="floatingIdentificacion">
                 <label for="floatingIdentificacion" class="color-label font-bold">Identificacion</label>
             </div>
