--- a/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.html
+++ b/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.html
@@ -83,8 +83,8 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="actualizar()">Guardar</button>
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="actualizar()">Guardar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -103,6 +103,6 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
