--- a/src/app/plan/crear-plan/crear-plan.component.html
+++ b/src/app/plan/crear-plan/crear-plan.component.html
@@ -269,8 +269,8 @@
         </ng-container>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="crearRutina()">Guardar</button>
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="crearRutina()">Guardar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -394,8 +394,8 @@
         </ng-container>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="actualizarRutina()">Guardar</button>
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="actualizarRutina()">Guardar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -423,7 +423,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -453,7 +453,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="crearPlantillaPlan()">Guardar</button>
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="crearPlantillaPlan()">Guardar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
