--- a/src/app/plan/leer-medida/leer-medida.component.html
+++ b/src/app/plan/leer-medida/leer-medida.component.html
@@ -23,7 +23,7 @@
                         IDENTIFICACION: {{usuario.identificacion}}
                     </li>
                     <li class="list-group-item font-color d-flex justify-content-center">
-                        TALLA: {{usuario.talla}}
+                        ESTATURA: {{usuario.talla}}
                     </li>
                     <li class="list-group-item font-color d-flex justify-content-center">
                         EDAD: {{usuario.edad}}
@@ -100,7 +100,7 @@
         </table>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -128,7 +128,7 @@
         </table>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -154,7 +154,7 @@
         </table>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -180,6 +180,6 @@
         </table>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
