--- a/src/app/cliente/leer-cliente/leer-cliente.component.html
+++ b/src/app/cliente/leer-cliente/leer-cliente.component.html
@@ -173,8 +173,8 @@
         </table>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="actualizar()">Guardar</button>
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="actualizar()">Guardar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -224,8 +224,8 @@
         </table>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="actualizar()">Guardar</button>
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="actualizar()">Guardar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -274,8 +274,8 @@
         </table>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="actualizar()">Guardar</button>
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="actualizar()">Guardar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -324,8 +324,8 @@
         </table>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="actualizar()">Guardar</button>
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="actualizar()">Guardar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -382,7 +382,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="actualizar()">Guardar</button>
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="actualizar()">Guardar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
