--- a/src/app/plan/crear-plantilla-plan/crear-plantilla-plan.component.html
+++ b/src/app/plan/crear-plantilla-plan/crear-plantilla-plan.component.html
@@ -253,8 +253,8 @@
         </ng-container>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="crearRutina()">Guardar</button>
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="crearRutina()">Guardar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -378,8 +378,8 @@
         </ng-container>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="actualizarRutina()">Guardar</button>
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="actualizarRutina()">Guardar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
 
@@ -408,6 +408,6 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
