--- a/src/app/plan/leer-plan/leer-plan.component.html
+++ b/src/app/plan/leer-plan/leer-plan.component.html
@@ -22,77 +22,71 @@
         </div>
     </ng-container>
     <ng-container *ngIf="usuario.plan != null && usuario.plan.dias.length!=0">
-        <div class="row">
-            <div class="col-sm">
-                <div id="accordion">
-                    <ng-container *ngFor="let dia of usuario.plan.dias; let i=index">
-                        <div class="card">
-                            <div class="card-header" id="heading{{i+1}}">
-                                <h5 class="mb-0">
-                                    <button class="btn btn-link" data-toggle="collapse"
-                                        attr.data-target="#collapse{{i+1}}" aria-expanded="true"
-                                        attr.aria-controls="collapse{{i+1}}">
-                                        DIA {{i+1}} ({{dia.nombre}})
-                                    </button>
-                                </h5>
-                            </div>
-
-                            <div id="collapse{{i+1}}" class="collapse {{dia.show}}"
-                                attr.aria-labelledby="heading{{i+1}}" data-parent="#accordion">
-                                <div class="card-body">
-                                    <ng-container *ngIf="dia.rutinas.length>0">
-                                        <div class="row">
-                                            <div class="col-sm table-responsive">
-                                                <table class="table table-sm table-hover table-bordered">
-                                                    <thead>
-                                                        <tr class="menor-fuente">
-                                                            <th scope="col">°</th>
-                                                            <th scope="col">EJERCICIO</th>
-                                                            <th scope="col">REP</th>
-                                                            <th scope="col">SER</th>
-                                                            <th scope="col">PESO&nbsp;&nbsp;</th>
-                                                            <th scope="col">TIEMPO</th>
-                                                            <th scope="col">OPC</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        <tr class="menor-fuente"
-                                                            *ngFor="let rutina of dia.rutinas; let j=index">
-                                                            <td>{{j+1}}</td>
-                                                            <td>
-                                                                {{rutina.ejercicio.descripcion}}
-                                                            </td>
-                                                            <td>
-                                                                {{rutina.repeticiones}}
-                                                            </td>
-                                                            <td>
-                                                                {{rutina.series}}</td>
-                                                            <td>
-                                                                {{rutina.valorPeso}}&nbsp;
-                                                                {{rutina.medidaPeso}}
-                                                            </td>
-                                                            <td>
-                                                                {{rutina.valorTiempo}}&nbsp;
-                                                                {{rutina.medidaTiempo}}
-                                                            </td>
-                                                            <td>
-                                                                <button class="btn btn-sm btn-primary separate"
-                                                                    (click)="abrirModalLeerEjercicio(i, j)">
-                                                                    <i class="fa fa-eye"></i>
-                                                                </button>
-                                                            </td>
-                                                        </tr>
-                                                    </tbody>
-                                                </table>
-                                            </div>
-                                        </div>
-                                    </ng-container>
+        <div class="accordion" id="accordionExample">
+            <ng-container *ngFor="let dia of usuario.plan.dias; let i=index">
+                <div class="accordion-item">
+                    <div class="accordion-header" id="heading{{i+1}}">
+                        <button class="accordion-button collapsed color-label" type="button" data-bs-toggle="collapse"
+                            attr.data-bs-target="#collapse{{i+1}}" aria-expanded="false"
+                            attr.aria-controls="collapse{{i+1}}">
+                            DIA {{i+1}} ({{dia.nombre}})
+                        </button>
+                    </div>
+                    <div id="collapse{{i+1}}" class="accordion-collapse collapse {{dia.show}}"
+                        attr.aria-labelledby="heading{{i+1}}" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <ng-container *ngIf="dia.rutinas.length>0">
+                                <div class="row">
+                                    <div class="col-sm table-responsive">
+                                        <table class="table table-sm table-hover table-bordered">
+                                            <thead>
+                                                <tr class="menor-fuente font-color">
+                                                    <th scope="col">°</th>
+                                                    <th scope="col">EJERCICIO</th>
+                                                    <th scope="col">REP</th>
+                                                    <th scope="col">SER</th>
+                                                    <th scope="col">PESO&nbsp;&nbsp;</th>
+                                                    <th scope="col">TIEMPO</th>
+                                                    <th scope="col">OPC</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr class="menor-fuente font-color"
+                                                    *ngFor="let rutina of dia.rutinas; let j=index">
+                                                    <td>{{j+1}}</td>
+                                                    <td>
+                                                        {{rutina.ejercicio.descripcion}}
+                                                    </td>
+                                                    <td>
+                                                        {{rutina.repeticiones}}
+                                                    </td>
+                                                    <td>
+                                                        {{rutina.series}}
+                                                    </td>
+                                                    <td>
+                                                        {{rutina.valorPeso}}&nbsp;
+                                                        {{rutina.medidaPeso}}
+                                                    </td>
+                                                    <td>
+                                                        {{rutina.valorTiempo}}&nbsp;
+                                                        {{rutina.medidaTiempo}}
+                                                    </td>
+                                                    <td>
+                                                        <button class="btn btn-sm btn-light separate"
+                                                            (click)="abrirModalLeerEjercicio(i, j)">
+                                                            <i class="bi bi-eye font-color"></i>
+                                                        </button>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
                                 </div>
-                            </div>
+                            </ng-container>
                         </div>
-                    </ng-container>
+                    </div>
                 </div>
-            </div>
+            </ng-container>
         </div>
     </ng-container>
 </div>
@@ -120,6 +114,6 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark color-button" (click)="modal.close('Cerrar')">Cerrar</button>
+        <button type="button" class="btn btn-outline-light color-button" (click)="modal.close('Cerrar')">Cerrar</button>
     </div>
 </ng-template>
