--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,1 +1,1 @@
-<img style="width: 100%; height: 100%" src="{{prefijoUrlImagenes+inicio}}" alt="...">
+<img style="width: 100%; height: 100%" src="{{prefijoUrlImagenes+inicio[0].valor}}" alt="...">
